Fix scrollbars during animations with css

--- a/presentation.css
+++ b/presentation.css
@@ -1,5 +1,9 @@
+body ::-webkit-scrollbar {
+  display: none;
+}
+
 body {
-  overflow: hidden;
+  scrollbar-width: none;
 }
 
 /*-- scss:defaults --*/
